# ush

./: .gitignore  AGENT.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Justfile  README.md
docs/: README.md  architecture.md  audio-processing.md  modulation.md  performance.md  protocol.md  references.md
src/: app.rs  audio.rs  cli.rs  debug.rs  error.rs  lib.rs  main.rs  modulation.rs  protocol.rs
tests/: integration_tests.rs
